--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+@font-face {
+    font-family: "Coolvetica";
+    src: url("/fonts/coolvetica\ rg.ttf");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@keyframes popup_slide {
+	0% {
+		opacity: 0;
+		transform: translateY(250px);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
 html{
     background-color: rgb(0, 145, 255);
 }
@@ -27,4 +46,25 @@ html{
 
 .material-symbols-outlined:hover{
     color: #444;
+}
+
+.pop>h1{
+    color: black;
+    font-family: "Coolvetica";
+    letter-spacing: 3;
+}
+
+.pop{
+    margin: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 20%;
+    background-color: white;
+    margin-top: 50px;
+    text-align: center;
+    min-width: min-content;
+    max-width: max-content;
+    border-radius: 10px;;
+    animation: popup_slide 1.5s ease 0s 1 normal forwards;
 }
