--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ html{
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 5px;
-    padding-bottom: 20%;
+    padding-bottom: 5;
     background-color: white;
     min-height: min-content;
     max-height: max-content;
