--- a/style.css
+++ b/style.css
@@ -17,6 +17,20 @@
 	}
 }
 
+@keyframes rainbow{
+    0%{color: orange;}
+    10%{color: purple;}
+    20%{color: red;}
+    30%{color: CadetBlue};
+    40%{color: yellow;}
+    50%{color: coral;}
+    60%{color: green;}
+    70%{color: cyan;}
+    80%{color: DeepPink;}
+    90%{color: DodgerBlue;}
+    100%{color: orange;}
+}
+
 html{
     background-color: rgb(0, 145, 255);
 }
@@ -30,9 +44,9 @@ html{
     padding-bottom: 8px;
     border-radius: 30px;
     text-align: center;
-    background-color: white;
+    background-color: #222;
     text-decoration: none;
-    color: #111;
+    color: #ffffff;
     width: max-content;
     font-size: larger;
     display: flex;
@@ -60,11 +74,38 @@ html{
     padding-right: 15px;
     padding-top: 5px;
     padding-bottom: 5;
-    background-color: white;
+    background-color: #222;
     min-height: min-content;
     max-height: max-content;
     margin-top: 50px;
     text-align: center;
     border-radius: 10px;
     animation: popup_slide 1.5s ease 0s 1 normal forwards;
+}
+
+.pop>p{
+    color: white;
+}
+
+.staff_role{
+    font-family: "Karla";
+    font-size: small;
+}
+
+code{
+    background-color: #444;
+    color: #999;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    border-radius: 5px;
+}
+
+code>b:hover{
+    animation: rainbow 5s;
+}
+
+code>b{
+    color: rgb(255, 130, 130);
 }
